@@ -123,3 +123,4 @@ ATTR_jobstatrate,
 ATTR_polljobs,
 ATTR_downonerror,
 ATTR_jobnanny,
+ATTR_momjobsync,
